Fix javac deprecation and unchecked-operation warnings
Migrates Class.newInstance() call sites to getDeclaredConstructor().newInstance(),
parameterizes raw Class locals/fields to Class<?> to avoid the follow-on unchecked
warning, replaces the deprecated Mockito initMocks() with openMocks(), and
suppresses the one irreducible reflection+generics unchecked cast in EnumEditor.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>